# filebunker

./: .gitignore  LICENSE  README.md  README.pt-br.md  config.py  filebunker.py  pyproject.toml  requirements.txt
.github/: README.md  README.pt-br.md
api/classlib/: connect_mega.py  db.py  file.py  filehelp.py  jsonhelp.py  manager.py  menu.py
app/cli/: filebunker.py
configs/: config.json.example
