[project]
name = "filebunker"
version = "0.1.0"
description = "Store your files in the cloud with privacy. File Bunker encrypts each file with a different key before uploading them to the cloud!"
readme = { file = ".github/README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "thiado-dev-cyber", email = "thiagof@tutamail.com" }]
maintainers = [{ name = "thiado-dev-cyber", email = "thiagof@tutamail.com" }]

requires-python = ">=3.11"
dependencies = [
    "mega-py>=1.0.8",
    "pycryptodome>=3.21.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = ["ruff>=0.9.2"]

keywords = ["CLI", "Python", "cryptography", "files", "security", "privacy"]

[project.urls]
# Documentation = "https://thiago-dev-cyber.github.io/mosheh/"
Repository = "https://github.com/thiago-dev-cyber/filebunker"
Issues = "https://github.com/thiago-dev-cyber/filebunker/issues"
# Changelog = "https://thiago-dev-cyber.github.io/mosheh/CHANGELOG"

# [project.scripts]
# entrypoint = "path.to:main_fuction"


[tool.ruff]
line-length = 88
exclude = [".env", ".venv"]
fix = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["I", "E", "UP", "F"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2
