[project]
name = "filebunker"
version = "0.1.0"
description = "Store your files in the cloud with privacy. File Bunker encrypts each file with a different key before uploading them to the cloud!"
readme = { file = ".github/README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "thiado-dev-cyber", email = "thiagof@tutamail.com" }]
maintainers = [{ name = "thiado-dev-cyber", email = "thiagof@tutamail.com" }]

requires-python = ">=3.11"
dependencies = [
    "mega-py",
    "pycryptodome>=3.21.0",
    "python-dotenv>=1.0.1",
    "termcolor>=2.5.0",
]

[dependency-groups]
dev = ["ruff>=0.9.2"]

keywords = ["api", "app", "cryptography", "files", "security", "privacy"]

[project.urls]
# Documentation = "https://thiago-dev-cyber.github.io/mosheh/"
Repository = "https://github.com/thiago-dev-cyber/filebunker"
Issues = "https://github.com/thiago-dev-cyber/filebunker/issues"
# Changelog = "https://thiago-dev-cyber.github.io/mosheh/CHANGELOG"

# [project.scripts]
# entrypoint = "path.to:main_fuction"


[tool.ruff]
line-length = 92
exclude = [".env", ".venv", "uv.lock", ".github", "pyproject.toml"]
fix = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["I", "E", "UP", "F"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F821"]
"filebunker.py" = ["E402"]
"api/classlib/db.py" = ["E101"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.uv.sources]
mega-py = { git = "https://github.com/thiago-dev-cyber/mega.py" }

